# AdaMBE

./: README.md
baselines/MBE-GPU/: BiGraph.cu  BicliqueFinder.cu  BicliqueFinder.h  CMakeLists.txt  IterFinderGpu.cu
baselines/MBE-GPU/cub/: Makefile  cmake_install.cmake
baselines/oombea/: BiCore.cpp  BiCore.h  CMakeLists.txt  Utility.cpp  Utility.h  bgraph.cpp  bgraph.h  main.cpp  ooMBE.cpp  ooMBE.h
baselines/parallel-mbe/: CMakeLists.txt  main.cpp
baselines/parallel-mbe/oneTBB/lib/: libtbbmalloc.so.2.10  libtbbmalloc_proxy.so.2.10
baselines/parallel-mbe/oneTBB/lib/cmake/TBB/: TBBConfigVersion.cmake
baselines/parallel-mbe/source/: CMakeLists.txt  Lmbc.cpp  Lmbc.h  ParLmbc.cpp  ParLmbc.h  global.h  iMBEA.cpp  iMBEA.h  undirectedgraph.cpp  undirectedgraph.h  utils.h
fig/: zplot_config.py
fig/fig-10/fig-10-a/: fig-10-a.data  fig-10-a.py  fig-10-d.data
fig/fig-10/fig-10-b/: fig-10-b.data  fig-10-b.py
fig/fig-10/fig-10-c/: fig-10-c.data  fig-10-c.py
fig/fig-10/fig-10-d/: fig-10-d.py
fig/fig-11/: fig-11-a.py  fig-11-b.py
fig/fig-12/: fig-12.py
fig/fig-13/: fig-13-0.data  fig-13-1.data  fig-13-2.data  fig-13-3.data  fig-13.data  fig-13.py
fig/fig-14/: fig-14-a.data  fig-14-a.py  fig-14-b.data  fig-14-b.py
fig/fig-8/: Makefile  fig-8-a.data  fig-8-a.py  fig-8-b.data  fig-8-b.py
fig/fig-9/: fig-9-a.data  fig-9-a.py  fig-9-b.data  fig-9-b.py
preprocess/: data_sampling.cpp  prepare_dataset.sh
scripts/: compile-GMBE.sh  compile-adambe.sh  compile-baselines.sh  gen-fig-10.sh  gen-fig-11.sh  gen-fig-12.sh  gen-fig-13.sh  gen-fig-14.sh  gen-fig-8.sh  gen-fig-9.sh
src/: AdaFinder.cpp  AdaFinder.h  BaselineFinder.cpp  BaselineFinder.h  BiGraph.cpp  BiGraph.h  BicliqueFinder.cpp  BicliqueFinder.h  CMakeLists.txt  ParAdaFinder.cpp  ParAdaFinder.h  Utility.cpp  Utility.h  main.cpp
src/oneTBB/lib/: libtbbbind_2_0.so.3.10
src/oneTBB/lib/cmake/TBB/: TBBTargets-relwithdebinfo.cmake
src/oneTBB/lib/pkgconfig/: tbb.pc
